# university

./: .comet.yaml  .env.example  .gitignore  README.md  pyproject.toml  tmp_analyze2.py  tmp_find_api.py
.comet/: config.yaml
app/: config.py  db.py
data/: llm_sim.db.bak.20260630_222428
docs/: henan-2026-playwright-evidence-report.md
scripts/: apply_heao_websites_to_seed.py  backfill_heao_volunteer_codes.py  backfill_henan_history_rank.py  backfill_henan_source_traceability.py  backfill_program_group_majors_from_heao.py  bridge_heao_rank_by_volunteer_group.py  build_henan_2026_csv.py  build_henan_admission_history.py  build_henan_coverage_report.py  capture_page2.py  convert_gaokao_cn_history_plans.py  dev.bat  dev.ps1  discover_henan_2026_official_sources.py  download_henan_2026_catalog_sources.py  dump_heao_assessment.py  enrich_gaokao_cn_henan_2026.py  evaluate_brother_volunteers.py  expand_henan_universities.py  extract_henan_2026_catalog_pdf.py  fetch_2024_score_rank_playwright.py  gen_public_recommendation.py  gen_recommendation.py  heao_client.py  import_heao_admission_to_history.py  import_henan_2026_catalog.py  import_henan_admission_history.py  list_missing_review_schools.py  merge_heao_history.py  ocr_henan.py  ocr_henan_2024.py  probe_vip_lock.py  promote_verified_groups.py  query_biz_candidates.py  query_biz_private_candidates.py  rebuild_program_groups_language_rule.py  scrape_all_pages.py  scrape_all_plans.py  scrape_all_plans_v2.py  scrape_heao_admission.py  (+7 more)
tests/: conftest.py  test_advisory_models.py  test_compliance.py  test_db.py  (+2 more)
(+377 files in other folders)
